# ylcs-app

./: .eslintrc.js  .gitignore  README.md  app.json  babel.config.js  index.js  metro.config.js  metro.config.web.js  package-lock.json  package.json  react-native.config.js  server.js  tsconfig.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/debug/java/love/yinlin/ylcs/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/love/yinlin/ylcs/: MainActivity.java  MainApplication.java
android/app/src/main/java/love/yinlin/ylcs/rn/: MusicViewManager.kt  RachelPackage.kt
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/xml/: provider_paths.xml
android/app/src/release/java/love/yinlin/ylcs/: ReactNativeFlipper.java
docs/: architecture.drawio
harmony/: hvigorfile.ts  oh-package.json5
harmony/AppScope/: app.json5
harmony/AppScope/resources/base/element/: string.json
harmony/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
harmony/entry/src/main/: module.json5
harmony/entry/src/main/cpp/: CMakeLists.txt  PackageProvider.cpp
harmony/entry/src/main/ets/: RNPackagesFactory.ets
harmony/entry/src/main/ets/entryability/: EntryAbility.ets
harmony/entry/src/main/ets/entrybackupability/: EntryBackupAbility.ets
harmony/entry/src/main/ets/pages/: Index.ets
harmony/entry/src/main/resources/base/element/: string.json
harmony/hvigor/: hvigor-config.json5
ios/: Podfile
ios/ylcs/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/ylcs.xcodeproj/: project.pbxproj
ios/ylcs.xcodeproj/xcshareddata/xcschemes/: ylcs.xcscheme
ios/ylcs.xcworkspace/: contents.xcworkspacedata
ios/ylcsTests/: ylcsTests.m
kmp/: build.gradle.kts
kmp/src/androidMain/kotlin/love/yinlin/ylcs/: ComposePreviews.kt  MusicFragment.kt  Platform.android.kt
kmp/src/androidMain/kotlin/love/yinlin/ylcs/common/: RachelPlayerAndroid.kt
kmp/src/androidMain/kotlin/love/yinlin/ylcs/service/: MusicService.kt
kmp/src/androidMain/kotlin/love/yinlin/ylcs/ui/: MusicFragment.kt
kmp/src/androidMain/kotlin/love/yinlin/ylcs/utils/: KVUtil.android.kt  Platform.android.kt
kmp/src/androidMain/res/values/: strings.xml
kmp/src/commonMain/composeResources/drawable/: ic_anim.xml  ic_comments.xml  ic_library.xml  ic_lyrics.xml  ic_mv.xml  ic_play.xml  ic_player_mode_loop.xml  ic_player_mode_order.xml  ic_player_mode_random.xml  ic_player_next.xml  ic_player_pause.xml  ic_player_play.xml  ic_player_playlist.xml  ic_player_previous.xml  ic_playlist.xml  ic_sleep_mode.xml  ic_workshop.xml
kmp/src/commonMain/kotlin/love/yinlin/ylcs/: App.kt  Platform.kt
kmp/src/commonMain/kotlin/love/yinlin/ylcs/common/: Config.kt  RachelMod.kt  RachelPlayer.kt
kmp/src/commonMain/kotlin/love/yinlin/ylcs/ui/: ColorExt.kt  IconExt.kt  MusicPlayer.kt  RachelTheme.kt
kmp/src/commonMain/kotlin/love/yinlin/ylcs/utils/: CollectionEx.kt  DateTimeUtil.kt  FileUtil.kt  KVUtil.kt  PlatformUtil.kt
kmp/src/iosMain/kotlin/love/yinlin/ylcs/: Platform.ios.kt
kmp/src/iosMain/kotlin/love/yinlin/ylcs/utils/: KVUtil.ios.kt  Platform.ios.kt
patches/: @d11+react-native-fast-image+8.9.0.patch  @react-native+gradle-plugin+0.72.11.patch  @react-native-oh-tpl+react-native-track-player+4.1.1-0.0.1.patch  @shopify+flash-list+1.6.3.patch  react-native-calendars+1.1304.1.patch  react-native-image-picker+7.0.3.patch  react-native-mmkv-storage+0.10.3.patch  react-native-mmkv-storage+0.11.0.patch  react-native-prompt-android+1.1.0.patch  react-native-qr-decode-image-camera+1.1.3.patch  react-native-safe-area-context+4.7.4.patch  react-native-screens+3.29.0.patch  react-native-svg+15.0.0.patch  react-native-unistyles+2.7.2.patch  react-native-vision-camera+4.0.1.patch
public/: index.html
src/: App.tsx  config.ts  router.ts  theme.ts
src/api/: common.ts  weibo.ts  ylcs.ts
src/components/: AlbumCard.jsx  AutoSizeImage.jsx  Breadcrumb.jsx  EventCalendar.jsx  FastAutoSizeImage.jsx  Html.jsx  LevelLabel.jsx  LoadMoreItem.jsx  LoadingIndicator.jsx  MusicPlayer.android.jsx  MusicPlayer.jsx  NineGridImage.jsx  OfflineIndicator.jsx  PopupMenu.jsx  ProfileCard.jsx  TabBar.jsx  TopicCard.jsx  TopicComment.jsx  TopicHeader.jsx  TopicPreviewCard.jsx  WeiboCard.jsx  WeiboComment.jsx  WeiboHeader.jsx  WeiboSubComment.jsx
src/hooks/: useForceUpdate.tsx  useNeedAuth.tsx
src/pages/: About.jsx  ContactCard.jsx  Discovery.jsx  EditProfile.jsx  EventDetail.jsx  Gallery.jsx  Login.jsx  Mailbox.jsx  Me.jsx  Music.jsx  News.jsx  PostTopic.jsx  Preview.jsx  ScanCode.jsx  Settings.jsx  TopicDetail.jsx  User.jsx  WebBroswer.jsx  WeiboDetail.jsx  WeiboFollows.jsx  WeiboUser.jsx  World.jsx
src/store/: Activities.ts  Gallery.ts  Mailbox.ts  News.ts  Topic.ts  User.ts  index.ts
src/utils/: util.ts
(+10 files in other folders)
